<resources>
    <string name="app_name">MAP</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="menu_items">
        <item>Logowanie</item>
        <item>Mapa</item>
        <item>Grupy</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_logout">Logout</string>

        <string name="login_with_facebook">Login with Facebook</string>
        <string name="login_with_google">Login with Google+</string>
        <string name="login_with_twitter">Login with Twitter</string>
        <string name="login_with_password">Login with Password</string>
        <string name="login_anonymously">Login Anonymously</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_missmatch">Hasla sie nie zgadzaja</string>
    <string name="registration_sucessfull">Zarejestrowano konto</string>
    <string name="registration_error">Wystapil blad</string>


    <string name="button_confirm_radius">Zatwierdz</string>
    <string name="radius_hint">Wartosc promienia</string>
    <string name="your_position">Jestes tutaj</string>
    <string name="lat_lang">Wspolrzedne</string>

    <string name="message_content">Tresc: </string>
    <string name="message_author">Autor: </string>
    <string name="message_date">Data: </string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="nav_drawer_title">WITAJ</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
