<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="MainActivity">

    <TextView
        android:id="@+id/login_status"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />
    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:background="@drawable/textview_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />
    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:background="@drawable/textview_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />




    <Button
        android:id="@+id/login_with_password"
        android:text="@string/login_with_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_anonymously"
        android:text="@string/login_anonymously"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>